src/test/deca/extension/syntax/valid/declaration_assign_array.deca
// Creation of an array of int

{
    Int[] a;
    a = {4,4,5};
    print(a);
}