src/test/deca/extension/syntax/invalid/missing_bracket.deca
// Missing bracket in the creation of an array

{
    int[ a ;
}